# play_with_ncnn

./: .gitignore  .gitmodules  NOTICE.md  README.md  download_resource.sh
InferenceHelper/: CMakeLists.txt  InferenceHelper.h  InferenceHelperOpenCV.cpp  InferenceHelperTensorRt.cpp
ViewAndroid/app/: build.gradle
ViewAndroid/app/src/androidTest/java/com/iwatake/viewandroidncnn/: ExampleInstrumentedTest.java
ViewAndroid/app/src/main/: AndroidManifest.xml
ViewAndroid/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ViewAndroid/app/src/main/java/com/iwatake/viewandroid/: MainActivity.java
ViewAndroid/app/src/main/java/com/iwatake/viewandroidncnn/: MainActivity.java
ViewAndroid/app/src/main/res/values/: strings.xml
ViewAndroid/app/src/test/java/com/iwatake/viewandroidncnn/: ExampleUnitTest.java
mobilenet_v2/: CMakeLists.txt  Main.cpp
pj_ncnn_anime2sketch/: main.cpp
pj_ncnn_anime2sketch/image_processor/: CMakeLists.txt  anime_to_sketch_engine.cpp  anime_to_sketch_engine.h  image_processor.cpp
pj_ncnn_cls_mobilenet_v2/: Main.cpp
pj_ncnn_cls_mobilenet_v2/ImageProcessor/: CMakeLists.txt  ClassificationEngine.cpp  ClassificationEngine.h  ImageProcessor.cpp  ImageProcessor.h
pj_ncnn_cls_mobilenet_v2/image_processor/: CMakeLists.txt  classification_engine.cpp  classification_engine.h  image_processor.h
pj_ncnn_det_mobilenet_v3/: Main.cpp  _Main.cpp  main.cpp
pj_ncnn_det_mobilenet_v3/ImageProcessor/: CMakeLists.txt  DetectionEngine.cpp  DetectionEngine.h  ImageProcessor.cpp
pj_ncnn_det_mobilenet_v3/image_processor/: CMakeLists.txt  detection_engine.cpp  detection_engine.h  image_processor.cpp  image_processor.h
pj_ncnn_det_nanodet/: Main.cpp  main.cpp
pj_ncnn_det_nanodet/ImageProcessor/: CMakeLists.txt  DetectionEngine.cpp  DetectionEngine.h  ImageProcessor.cpp
pj_ncnn_det_nanodet/image_processor/: detection_engine.cpp  detection_engine.h  image_processor.cpp  image_processor.h
pj_ncnn_det_yolox/image_processor/: CMakeLists.txt  detection_engine.cpp
pj_ncnn_lane_ultra-fast-lane-detection_v2/: README.md
pj_ncnn_lane_ultra-fast-lane-detection_v2/image_processor/: CMakeLists.txt  lane_engine.cpp
project_cls_mobilenet_v2/: CMakeLists.txt  Main.cpp  README.md
project_cls_mobilenet_v2/ImageProcessor/: CMakeLists.txt  ImageProcessor.cpp
project_cls_mobilenet_v2/model/: mobilenetv2-1.0.param  mobilenetv2-1.0_int8.param
project_det_mobilenet_v3/: CMakeLists.txt  Main.cpp
project_det_mobilenet_v3/ImageProcessor/: ImageProcessor.h
resource/model/: mobilenetv2-1.0_opt.param  nanodet.onnx  nanodet.param
